fix: Make invisible but clickable menu not clickable

--- a/src/components/Nav/index.css
+++ b/src/components/Nav/index.css
@@ -115,6 +115,9 @@
   font-weight: normal;
   text-indent: 0.25em;
 }
+.nav [aria-expanded='false'] ~ ul {
+  display: none;
+}
 .nav [aria-expanded='false'] ~ ul li {
   opacity: 0;
   transition-property: none;
